@@ -19,7 +19,7 @@
 \usepackage[utf8x]{inputenc}
 \pagestyle{empty}
 \begin{document}
-__REPLACEME__ %this is where your LaTeX expression goes
+__REPLACE_ME__ %this is where your LaTeX expression goes
 \end{document}
     </pre>
    <p>
@@ -29,7 +29,7 @@ __REPLACEME__ %this is where your LaTeX expression goes
     extra output such as page numbers, which is why cropping works.
     </p>
     <p>
-    The <tt>__REPLACEME__</tt> word will be replaced with the LaTeX expression
+    The <tt>__REPLACE_ME__</tt> word will be replaced with the LaTeX expression
     you specified. Therefore, it is important you put it in the right place.
     </p>
     <p>
@@ -52,7 +52,7 @@ __REPLACEME__ %this is where your LaTeX expression goes
 \usepackage{mathpazo}
 \pagestyle{empty}
 \begin{document}
-__REPLACEME__ %this is where your LaTeX expression goes
+__REPLACE_ME__ %this is where your LaTeX expression goes
 \end{document}
     </pre>
  
